--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -73,7 +73,7 @@ body {
   text-align: left;
   background-color: #fff;
 
-  background-image: url('http://i.stack.imgur.com/kx8MT.gif');
+  background-image: url('../imgs/1.gif');
   background-size: cover;
     
     
