--- a/assets/css/leadmark.css
+++ b/assets/css/leadmark.css
@@ -72,9 +72,9 @@ body {
   color: #444;
   text-align: left;
   background-color: #fff;
-
+  /*background-repeat: no-repeat;
   background-image: url('../imgs/1.gif');
-  background-size: cover;
+  background-size: cover;*/
     
     
     
